--- a/src/HOAHome/HOAHome/Views/Shared/Site.Master
+++ b/src/HOAHome/HOAHome/Views/Shared/Site.Master
@@ -33,6 +33,7 @@
                     <li><%= Html.ActionLink("Home", "Index", "Home")%></li>
                     <li><%= Html.ActionLink("About", "About", "Home")%></li>
                     <li><%= Html.ActionLink("My Neighborhood", "Neighborhood", "Home")%></li>
+                    <li><%= Html.ActionLink("In Development Links", "Links", "Development")%></li>
                 </ul>
             </asp:ContentPlaceHolder>
             </div>
