--- a/src/HOAHome/HOAHome/Views/Shared/Site.Master
+++ b/src/HOAHome/HOAHome/Views/Shared/Site.Master
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
     <title><asp:ContentPlaceHolder ID="TitleContent" runat="server" /></title>
-    <script type="text/javascript" src="../../gwt/hoagwtproject/hoagwtproject.nocache.js"></script>
+    <script type="text/javascript" src="../../hoagwt20/hoagwt20.nocache.js"></script>
     <link href="../../Content/Site.css" rel="stylesheet" type="text/css" />
     <script src="../../Content/anylinkcssmenu.js" type="text/javascript"></script>
   
