1. Added rules system

--- a/src/HOAHome/HOAHome/T4MVC.tt
+++ b/src/HOAHome/HOAHome/T4MVC.tt
@@ -275,7 +275,7 @@ namespace <#=controller.Namespace #> {
 
 <#} #>
         [<#= GeneratedCode #>, DebuggerNonUserCode]
-        protected <#=controller.ClassName #>(Dummy d) { }
+        protected <#=controller.ClassName #>(Dummy d):this() { }
 
         [<#= GeneratedCode #>, DebuggerNonUserCode]
         protected RedirectToRouteResult RedirectToAction(ActionResult result) {
