--- a/src/HOAHome/HOAHome/Views/Shared/Main.Master
+++ b/src/HOAHome/HOAHome/Views/Shared/Main.Master
@@ -1,16 +1,17 @@
 ﻿<%@ Master Language="C#" Inherits="System.Web.Mvc.ViewMasterPage" %>
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml" >
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html>
 <head runat="server">
     <title><asp:ContentPlaceHolder ID="TitleContent" runat="server" /></title>
+     <script type="text/javascript" src="../../hoagwt20/hoagwt20.nocache.js"></script>
 </head>
 <body>
-    <div>
+  
+    <asp:ContentPlaceHolder ID="NeighborhoodTitle" runat="server" />
+
         <asp:ContentPlaceHolder ID="MainContent" runat="server">
         
         </asp:ContentPlaceHolder>
-    </div>
+   
 </body>
 </html>
