--- a/src/HOAHome/HOAHome/Views/Shared/Site.Master
+++ b/src/HOAHome/HOAHome/Views/Shared/Site.Master
@@ -4,13 +4,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
     <title><asp:ContentPlaceHolder ID="TitleContent" runat="server" /></title>
-    <script type="text/javascript" src="../../hoagwt20/hoagwt20.nocache.js"></script>
-    <link href="../../Content/Site.css" rel="stylesheet" type="text/css" />
-    <script src="../../Content/anylinkcssmenu.js" type="text/javascript"></script>
+    <script type="text/javascript" src="<%=this.Url.Content("~/hoagwt20/hoagwt20.nocache.js") %>"></script>
+    <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
+    <script src="<%=this.Url.Content("~/Content/anylinkcssmenu.js")%>"  type="text/javascript"></script>
   
  <%-- <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=false&amp;key=ABQIAAAACPMbozlNv9AIzNvsWUm6vhSvnLMDprvOSMH9Qt_oH5Ww7FTw1hRHT7gTSie1yM34rowNwVfw424XPA" type="text/javascript"></script>
  --%>
-    <link href="../../Content/anylinkcssmenu.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/anylinkcssmenu.css" rel="stylesheet" type="text/css" />
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
       
 </head>
