--- a/src/HOAHome/HOAHome/Views/Shared/NeighborHood.Master
+++ b/src/HOAHome/HOAHome/Views/Shared/NeighborHood.Master
@@ -1,4 +1,5 @@
 ﻿<%@ Master Language="C#" MasterPageFile="~/Views/Shared/Site.Master" Inherits="System.Web.Mvc.ViewMasterPage" %>
+<%@ Import Namespace="HOAHome" %>
 
 <asp:Content ContentPlaceHolderID="MenuContent" runat="server">
     <ul id="menu">
@@ -6,7 +7,7 @@
         <li><%= Html.ActionLink("Documents",  "Documents", "Neighborhood")%></li>
             <li><%= Html.ActionLink("Board of Directors", "Index", "Director", new { @class = "anchorclass", rel="boardMenu" })%></li>
             <li><%= Html.ActionLink("Calendar", "Calendar", "Neighborhood")%></li>
-             <li><%= Html.ActionLink("Homes", MVC.nh.Home.Homes())%></li>
+             <li><%= T4Extensions.ActionLink(Html, "Homes", MVC.nh.Home.Homes())%></li>
         <li>
             <%= Html.ActionLink("Wave", "Wave", "Neighborhood")%></li>
     </ul>
